scripts/resources/echo-svc-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-service-2
  labels:
    k8s-app: echo-service-2
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: echo-service-2
  template:
    metadata:
      labels:
        k8s-app: echo-service-2
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: echo-service
        image: harbor-b.alauda.cn/3rdparty/httpecho 
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service-2
  labels:
    k8s-app: echo-service-2
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    k8s-app: echo-service-2
