scripts/resources/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
  - http:
      paths:
        - path: /echo-1
          backend:
            serviceName: echo-service-1
            servicePort: 80
        - path: /echo-2
          backend:
            serviceName: echo-service-2
            servicePort: 80
